add jointure liste des demandes par offre.